--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 2_NLP/Resource/data/model_ner/model_ontochinese_Att-0_BiLSTM-2-500_batch128-run1.meta
 2_NLP/Resource/data/model_ws/model_asbc_Att-0_BiLSTM-cross-2-500_batch128-run1.data-00000-of-00001
 2_NLP/Resource/data/model_pos/model_asbc_Att-0_BiLSTM-2-500_batch256-run1.data-00000-of-00001
+2_NLP/Resource/tmunlp_1.6B_WB_300dim_2020v1.bin.gz
+2_NLP/Resource/tmunlp_1.6B_WB_50dim_2020v1.bin.gz
+2_NLP/Resource/zhwiki-latest-pages-articles.xml.bz2
